devsecops/k8s/apps/backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-stable
  namespace: app-backend
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: app-backend
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
