devsecops/k8s/apps/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-httproute
  namespace: app-backend
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: backend-stable
          port: 8080
          weight: 100
        - name: backend-canary
          port: 8080
          weight: 0
